--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,8 @@
 	debug_info
 ]}.
 
+{sub_dirs, ["rel"]}.
+
 {deps, [
 	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}}
 ]}.
