additional configurations of "make generate"

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,5 +1,5 @@
 {sys, [
-       {lib_dirs, []},
+       {lib_dirs, ["../deps"]},
        {erts, [{mod_cond, derived}, {app_file, strip}]},
        {app_file, strip},
        {rel, "globalregistry", "1",
@@ -7,6 +7,7 @@
          kernel,
          stdlib,
          sasl,
+	     cowboy,
          globalregistry
         ]},
        {rel, "start_clean", "",
@@ -22,7 +23,8 @@
        {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
-       {app, globalregistry, [{mod_cond, app}, {incl_cond, include}]}
+       {app, globalregistry, [{mod_cond, app},{incl_cond, include},{lib_dir, ".."}]},
+       {app, hipe, [{incl_cond, exclude}]}
       ]}.
 
 {target_dir, "globalregistry"}.
