try generate rpm with node_package

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -29,14 +29,21 @@
 
 {target_dir, "globalregistry"}.
 
+{overlay_vars, "vars.config"}.
+
 {overlay, [
-           {mkdir, "log/sasl"},
-           {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
-           {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/globalregistry", "bin/globalregistry"},
-           {copy, "files/globalregistry.cmd", "bin/globalregistry.cmd"},
-           {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
-           {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
-           {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
-           {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
+			{mkdir, "log/sasl"},
+
+			%% Copy base files for starting and interacting with node
+			{copy, "../deps/node_package/priv/base/erl",
+				"{{erts_vsn}}/bin/erl"},
+			{copy, "../deps/node_package/priv/base/nodetool",
+				"{{erts_vsn}}/bin/nodetool"},
+			{template, "../deps/node_package/priv/base/runner",
+				"bin/globalregistry"},
+			{template, "../deps/node_package/priv/base/env.sh",
+				"lib/env.sh"},
+
+			{copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
+			{copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
           ]}.
