--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,6 @@
 {sub_dirs, ["rel"]}.
 
 {deps, [
-	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}}
+	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
+	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}}
 ]}.
