--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -9,7 +9,7 @@
 {package_install_user_desc, "Globalregistry user"}.
 {package_shortdesc, "Scalable global data register."}.
 {package_desc, "Scalable global data register."}.
-%% {package_commands, {list, [[{name, "globalregistry"}]]}}.
+{package_commands, {list, [[{name, "globalregistry"}]]}}.
 {package_patch_dir, "globalregistry-patches"}.
 {bin_or_sbin, "sbin"}.
 {license_type, "MIT License"}.
