--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -33,6 +33,7 @@
 
 {overlay, [
 			{mkdir, "log/sasl"},
+			{mkdir, "data/globalregistry"},
 
 			%% Copy base files for starting and interacting with node
 			{copy, "../deps/node_package/priv/base/erl",
@@ -44,6 +45,6 @@
 			{template, "../deps/node_package/priv/base/env.sh",
 				"lib/env.sh"},
 
-			{copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
-			{copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
+			{template, "files/app.config", "etc/app.config"},
+			{template, "files/vm.args", "etc/vm.args"},
           ]}.
