--- a/rel/vars.config
+++ b/rel/vars.config
@@ -1,3 +1,11 @@
+
+%% Platform-specific installation paths
+{platform_bin_dir,  "./bin"}.
+{platform_data_dir, "./data"}.
+{platform_etc_dir,  "./etc"}.
+{platform_lib_dir,  "./lib"}.
+{platform_log_dir,  "./log"}.
+
 %%
 %% bin/globalregistry
 %%
