--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -46,5 +46,5 @@
 				"lib/env.sh"},
 
 			{template, "files/app.config", "etc/app.config"},
-			{template, "files/vm.args", "etc/vm.args"},
+			{template, "files/vm.args", "etc/vm.args"}
           ]}.
