--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -45,5 +45,6 @@
 			{template, "../deps/node_package/priv/base/env.sh",
 				"lib/env.sh"},
 
+			{template, "files/app.config", "etc/app.config"},
 			{template, "files/vm.args", "etc/vm.args"}
           ]}.
