--- a/rel/vars.config
+++ b/rel/vars.config
@@ -7,6 +7,12 @@
 {platform_log_dir,  "./log"}.
 
 %%
+%% etc/vm.args
+%%
+{node,         "globalregistry@127.0.0.1"}.
+{crash_dump,   "{{platform_log_dir}}/erl_crash.dump"}.
+
+%%
 %% bin/globalregistry
 %%
 {data_dir,           "{{target_dir}}/data"}.
