add missing dir

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -33,6 +33,7 @@
 
 {overlay, [
 			{mkdir, "log/sasl"},
+			{mkdir, "data/globalregistry"},
 
 			%% Copy base files for starting and interacting with node
 			{copy, "../deps/node_package/priv/base/erl",
