--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,10 @@
 
 {sub_dirs, ["rel"]}.
 
+{clean_files, ["ebin/*.beam","test_distributed/*/*.beam","test_distributed/logs/*","variables-ct*"]}.
+
 {deps, [
 	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
-	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}}
+	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
+	{ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}}
 ]}.
