--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,21 @@
-{erl_opts, [
-	fail_on_warning,
-	debug_info
-]}.
-
 {sub_dirs, ["rel"]}.
 
 {clean_files, ["ebin/*.beam","test_distributed/*/*.beam","test_distributed/logs/*","variables-ct*"]}.
 
 {deps, [
+	{lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
 	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
 	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
 	{ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}}
+]}.
+
+{erl_opts, [
+	fail_on_warning,
+	debug_info,
+	{parse_transform, lager_transform}
+]}.
+
+{pre_hooks, [
+	{compile, "mkdir -p test_distributed/logs"},
+	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
 ]}.
