--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -8,6 +8,7 @@
          stdlib,
          sasl,
 	     cowboy,
+	     lager,
          globalregistry
         ]},
        {rel, "start_clean", "",
