-starting n2o server during app start -gui header added -example certs added

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -9,6 +9,7 @@
          sasl,
 	     cowboy,
 	     lager,
+         mimetypes,
          globalregistry
         ]},
        {rel, "start_clean", "",
