--- a/rebar.config
+++ b/rebar.config
@@ -4,9 +4,11 @@
 
 {deps, [
 	{lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
+	{n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.4.0"}}},
 	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
 	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
-	{ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}}
+	{ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}},
+	{mimetypes, "1.0", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}}
 ]}.
 
 {erl_opts, [
