--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -8,6 +8,13 @@
 		{error_logger_mf_maxfiles, 5}           % 5 files max
 	]},
 
+	%% n2o (GUI) configuration
+	{n2o, [
+		{port, 443},
+		{transition_port, 443},
+		{route, gui_routes} % Routing module for GUI
+	]},
+
 	{globalregistry, [
 		{db_nodes,['db@127.0.0.1']}
 	]}
