--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 
 {deps, [
 	{lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
-	{n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.4.0"}}},
+	{n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.1.0"}}},
 	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
 	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
 	{ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}},
@@ -20,4 +20,12 @@
 {pre_hooks, [
 	{compile, "mkdir -p test_distributed/logs"},
 	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
+]}.
+
+% Options for erlyDTL (templates for GUI)
+{erlydtl_opts, [
+	{doc_root, "src/gui_static/templates"},
+	{out_dir, "ebin"},
+	{source_ext, ".html"},
+	{module_ext, "_view"}
 ]}.
