--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -12,7 +12,16 @@
 	{n2o, [
 		{port, 443},
 		{transition_port, 443},
-		{route, gui_routes} % Routing module for GUI
+		{route, routes} % Routing module for GUI
+	]},
+
+	%% Lager config
+	{lager, [
+		{handlers, [
+			{lager_console_backend, info},
+			{lager_file_backend, [{file, "error.log"}, {level, error}]},
+			{lager_file_backend, [{file, "console.log"}, {level, info}]}
+		]}
 	]},
 
 	{globalregistry, [
