--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -4,13 +4,19 @@
        {app_file, strip},
        {rel, "globalregistry", "1",
         [
-         kernel,
-         stdlib,
-         sasl,
-	     cowboy,
-	     lager,
-         mimetypes,
-         globalregistry
+	        kernel,
+	        stdlib,
+	        sasl,
+	        lager,
+	        public_key,
+	        crypto,
+	        ssl,
+	        erlydtl,
+	        n2o,
+	        cowboy,
+	        mimetypes,
+	        ibrowse,
+	        globalregistry
         ]},
        {rel, "start_clean", "",
         [
@@ -46,7 +52,13 @@
 				"bin/globalregistry"},
 			{template, "../deps/node_package/priv/base/env.sh",
 				"lib/env.sh"},
-
+			%% Copy n2o files
+			{copy, "../src/gui_static/", "./"},
+			%% Copy server certificates
+			{copy, "../cacerts", "./"},
+			%% Copy license
+			{copy, "../LICENSE.txt", "./"},
+			%% Copy config files
 			{template, "files/app.config", "etc/app.config"},
 			{template, "files/vm.args", "etc/vm.args"}
           ]}.
