--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,7 @@
 
 {deps, [
 	{lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
+	{erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "0.8.0"}}},
 	{n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.1.0"}}},
 	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
 	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
