--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,9 @@
+%% behaviours should be compiled before other files
+{erl_first_files, [
+    "src/veil_modules/control_panel/auth_modules/auth_module_behaviour.erl"
+]}.
+
+
 {sub_dirs, ["rel"]}.
 
 {clean_files, ["ebin/*.beam","test_distributed/*/*.beam","test_distributed/logs/*","variables-ct*"]}.
