--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,22 @@
 {sub_dirs, ["rel"]}.
 
-{clean_files, ["ebin/*.beam","test_distributed/*/*.beam","test_distributed/logs/*","variables-ct*"]}.
+{clean_files, [
+  "ebin/*.beam",
+  "test/results",
+  "test_distributed/*/*.beam",
+  "test_distributed/logs/*",
+  "variables-ct*"
+]}.
+
+{cover_enabled, true}.
+
+{eunit_opts, [
+  verbose,
+  {report, {eunit_surefire, [{dir, "../test/results"}]}}
+]}.
 
 {deps, [
+  {meck, "0.8.1", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.1"}}},
 	{lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
 	{erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "0.8.0"}}},
 	{n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.1.0"}}},
@@ -19,8 +33,10 @@
 ]}.
 
 {pre_hooks, [
-	{compile, "mkdir -p test_distributed/logs"},
-	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
+  {eunit, "mkdir -p test/results"}, %% Make dir for eunit' surefire test results
+  {eunit, "epmd -daemon"} %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
+%% 	{compile, "mkdir -p test_distributed/logs"},
+%% 	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
 ]}.
 
 % Options for erlyDTL (templates for GUI)
