VFS-552, working auth for all providers but twitter

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -16,6 +16,7 @@
 	        cowboy,
 	        mimetypes,
 	        ibrowse,
+            xmerl,
 	        globalregistry
         ]},
        {rel, "start_clean", "",
