--- a/rebar.config
+++ b/rebar.config
@@ -3,30 +3,32 @@
 {clean_files, ["ebin/*.beam","test_distributed/*/*.beam","test_distributed/logs/*","variables-ct*"]}.
 
 {deps, [
-	{lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
-	{erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "0.8.0"}}},
-	{n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.1.0"}}},
-	{cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
-	{node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
-	{ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}},
-	{mimetypes, "1.0", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}}
+    {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
+    {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "0.8.0"}}},
+    {n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.1.0"}}},
+    {cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
+    {node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
+    {ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}},
+    {mimetypes, "1.0", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}},
+    {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}}
 ]}.
 
 {erl_opts, [
-	fail_on_warning,
-	debug_info,
-	{parse_transform, lager_transform}
+    fail_on_warning,
+    debug_info,
+    {parse_transform, lager_transform}
 ]}.
 
 {pre_hooks, [
-	{compile, "mkdir -p test_distributed/logs"},
-	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
+    {compile, "mkdir -p test_distributed/logs"},
+    {compile, "chmod u+x test_distributed/start_distributed_test.sh"}
 ]}.
 
 % Options for erlyDTL (templates for GUI)
 {erlydtl_opts, [
-	{doc_root, "src/gui_static/templates"},
-	{out_dir, "ebin"},
-	{source_ext, ".html"},
-	{module_ext, "_view"}
+    {compiler_options, [debug_info]},
+    {doc_root, "src/gui_static/templates"},
+    {out_dir, "ebin"},
+    {source_ext, ".html"},
+    {module_ext, "_view"}
 ]}.
