rest now works with https

--- a/rebar.config
+++ b/rebar.config
@@ -34,9 +34,9 @@
 
 {pre_hooks, [
   {eunit, "mkdir -p test/results"}, %% Make dir for eunit' surefire test results
-  {eunit, "epmd -daemon"} %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
-%% 	{compile, "mkdir -p test_distributed/logs"},
-%% 	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
+  {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
+	{compile, "mkdir -p test_distributed/log"},
+	{compile, "chmod u+x test_distributed/start_distributed_test.sh"}
 ]}.
 
 % Options for erlyDTL (templates for GUI)
