--- a/src/gui_static/auth.config
+++ b/src/gui_static/auth.config
@@ -3,6 +3,7 @@
         {auth_module, auth_google},
         {app_id, <<"359107885646-qkln917qvf9tig25gnncgo9sf1303sbs.apps.googleusercontent.com">>},
         {app_secret, <<"Myzpzu7xG456ny4JTLD_cA5Z">>},
+        {name, <<"Google">>},
         {button_text, <<"Sing in with Google">>},
         {button_icon, <<"/images/google_icon.png">>},
         {button_color, <<"#D54D53">>}
@@ -12,6 +13,7 @@
         {auth_module, auth_facebook},
         {app_id, <<"1442818389298539">>},
         {app_secret, <<"43f950a49ff6dd73c4450140d084e14c">>},
+        {name, <<"Facebook">>},
         {button_text, <<"Sing in with Facebook">>},
         {button_icon, <<"/images/facebook_icon.png">>},
         {button_color, <<"#596FA9">>}
@@ -20,6 +22,7 @@
         {auth_module, auth_twitter},
         {app_id, <<"ab87491bb2cc9ebee095">>},
         {app_secret, <<"985567f839a0c9756198b898f8cabfdc66273e05">>},
+        {name, <<"Twitter">>},
         {button_text, <<"Sing in with Twitter">>},
         {button_icon, <<"/images/twitter_icon.png">>},
         {button_color, <<"#33CAF2">>}
@@ -28,6 +31,7 @@
         {auth_module, auth_github},
         {app_id, <<"ab87491bb2cc9ebee095">>},
         {app_secret, <<"985567f839a0c9756198b898f8cabfdc66273e05">>},
+        {name, <<"GitHub">>},
         {button_text, <<"Sing in with GitHub">>},
         {button_icon, <<"/images/github_icon.png">>},
         {button_color, <<"#575757">>}
@@ -35,7 +39,8 @@
     {plgrid, [
         {auth_module, auth_plgrid},
         {button_text, <<"Sing in with PLGrid OpenID">>},
+        {name, <<"PlGrid OpenID">>},
         {button_icon, <<"/images/openid_icon.png">>},
-        {button_color, <<"#CACFD2">>}
+        {button_color, <<"#9A9FA2">>}
     ]}
 ].
