VFS-633, multiple spec updates

--- a/src/gui_static/auth.config
+++ b/src/gui_static/auth.config
@@ -1,41 +1,62 @@
 [
     {google, [
+        % Standard config
         {auth_module, auth_google},
         {app_id, <<"359107885646-qkln917qvf9tig25gnncgo9sf1303sbs.apps.googleusercontent.com">>},
         {app_secret, <<"Myzpzu7xG456ny4JTLD_cA5Z">>},
         {name, <<"Google">>},
         {button_icon, <<"/images/google_icon.png">>},
-        {button_color, <<"#D54D53">>}
+        {button_color, <<"#D54D53">>},
+        % Provider specific config
+        {xrds_endpoint, <<"https://accounts.google.com/.well-known/openid-configuration">>}
 
     ]},
+
     {facebook, [
+        % Standard config
         {auth_module, auth_facebook},
         {app_id, <<"1442818389298539">>},
         {app_secret, <<"43f950a49ff6dd73c4450140d084e14c">>},
         {name, <<"Facebook">>},
         {button_icon, <<"/images/facebook_icon.png">>},
-        {button_color, <<"#596FA9">>}
+        {button_color, <<"#596FA9">>},
+        % Provider specific config
+        {authorize_endpoint, <<"https://www.facebook.com/dialog/oauth">>},
+        {access_token_endpoint, <<"https://graph.facebook.com/oauth/access_token">>},
+        {user_info_endpoint, <<"https://graph.facebook.com/me">>}
     ]},
-    {twitter, [
-        {auth_module, auth_twitter},
-        {app_id, <<"ab87491bb2cc9ebee095">>},
-        {app_secret, <<"985567f839a0c9756198b898f8cabfdc66273e05">>},
-        {name, <<"Twitter">>},
-        {button_icon, <<"/images/twitter_icon.png">>},
-        {button_color, <<"#33CAF2">>}
-    ]},
+
+%%     {twitter, [
+%%         {auth_module, auth_twitter},
+%%         {app_id, <<"ab87491bb2cc9ebee095">>},
+%%         {app_secret, <<"985567f839a0c9756198b898f8cabfdc66273e05">>},
+%%         {name, <<"Twitter">>},
+%%         {button_icon, <<"/images/twitter_icon.png">>},
+%%         {button_color, <<"#33CAF2">>}
+%%     ]},
+
     {github, [
+        % Standard config
         {auth_module, auth_github},
         {app_id, <<"ab87491bb2cc9ebee095">>},
         {app_secret, <<"985567f839a0c9756198b898f8cabfdc66273e05">>},
         {name, <<"GitHub">>},
         {button_icon, <<"/images/github_icon.png">>},
-        {button_color, <<"#575757">>}
+        {button_color, <<"#575757">>},
+        % Provider specific config
+        {authorize_endpoint, <<"https://github.com/login/oauth/authorize">>},
+        {access_token_endpoint, <<"https://github.com/login/oauth/access_token">>},
+        {user_info_endpoint, <<"https://api.github.com/user">>},
+        {user_emails_endpoint, <<"https://api.github.com/user/emails">>}
     ]},
+
     {plgrid, [
+        % Standard config
         {auth_module, auth_plgrid},
         {name, <<"PlGrid OpenID">>},
         {button_icon, <<"/images/openid_icon.png">>},
-        {button_color, <<"#9A9FA2">>}
+        {button_color, <<"#9A9FA2">>},
+        % Provider specific config
+        {xrds_endpoint, <<"https://openid.plgrid.pl/gateway">>}
     ]}
 ].
