--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -59,6 +59,6 @@
 			%% Copy license
 			{copy, "../LICENSE.txt", "./"},
 			%% Copy config files
-			{template, "files/app.config", "etc/app.config"},
+			{template, "files/sys.config", "etc/sys.config"},
 			{template, "files/vm.args", "etc/vm.args"}
           ]}.
