VFS-639 Initial work on Provider and User authentication.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -56,6 +56,8 @@
 			{copy, "../src/gui_static/", "./"},
 			%% Copy server certificates
 			{copy, "../cacerts", "./"},
+            %% Copy Global Registry Provider CA
+            {copy, "../grpca", "./"},
 			%% Copy license
 			{copy, "../LICENSE.txt", "./"},
 			%% Copy config files
