--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -61,6 +61,7 @@
             {copy, "../grpca", "./"},
 			%% Copy license
 			{copy, "../LICENSE.txt", "./"},
+            {copy, "../src/dao/views/", "./"},
 			%% Copy config files
 			{template, "files/app.config", "etc/app.config"},
 			{template, "files/vm.args", "etc/vm.args"}
