--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
     {ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}},
     {mimetypes, "1.0", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
-    {ctool,".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {branch, "VFS-569-wspolne-repozytorium-dla-czesci-kodu"}}}
+    {ctool,".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "1247d4a"}}}
 ]}.
 
 {erl_opts, [
