--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
     "ebin/*.beam",
     "test/results",
     "test_distributed/*/*.beam",
-    "test_distributed/logs/*",
+    "test_distributed/log/*",
     "variables-ct*"
 ]}.
 
