--- a/rel/vars.config
+++ b/rel/vars.config
@@ -10,7 +10,13 @@
 %% etc/vm.args
 %%
 {node,         "globalregistry@127.0.0.1"}.
+{cookie,       "globalregistry"}.
 {crash_dump,   "{{platform_log_dir}}/erl_crash.dump"}.
+
+%%
+%% sys.config
+%%
+{db_nodes, "['db@127.0.0.1']"}.
 
 %%
 %% bin/globalregistry
