--- a/rebar.config
+++ b/rebar.config
@@ -22,21 +22,15 @@
 ]}.
 
 {deps, [
+    {ctool,".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "e5705b2"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
-    {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
-    {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "0.8.0"}}},
-    {n2o, ".*", {git, "git://github.com/5HT/n2o", {tag, "1.1.0"}}},
-    {cowboy, "0.8.6", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
     {node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
-    {ibrowse, "4.0.1", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}},
-    {mimetypes, "1.0", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}}
 ]}.
 
 {erl_opts, [
     fail_on_warning,
-    debug_info,
-    {parse_transform, lager_transform}
+    debug_info
 ]}.
 
 {pre_hooks, [
@@ -49,7 +43,7 @@
 % Options for erlyDTL (templates for GUI)
 {erlydtl_opts, [
     {compiler_options, [debug_info]},
-    {doc_root, "src/gui_static/templates"},
+    {doc_root, "src/gui/gui_static/templates"},
     {out_dir, "ebin"},
     {source_ext, ".html"},
     {module_ext, "_view"}
