--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -54,7 +54,7 @@
 			{template, "../deps/node_package/priv/base/env.sh",
 				"lib/env.sh"},
 			%% Copy n2o files
-			{copy, "../src/gui_static/", "./"},
+			{copy, "../src/gui/gui_static/", "./"},
 			%% Copy server certificates
 			{copy, "../cacerts", "./"},
             %% Copy Global Registry Provider CA
