VFS-633, merge part of ctool funciotnalities

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -7,16 +7,17 @@
 	        kernel,
 	        stdlib,
 	        sasl,
-	        lager,
 	        public_key,
 	        crypto,
 	        ssl,
-	        erlydtl,
-	        n2o,
-	        cowboy,
-	        mimetypes,
-	        ibrowse,
+            lager,
             xmerl,
+            % All ctool deps will be included in the release package,
+            % so there is no need to list them here.
+            ctool,
+            % n2o is a ctool dep, but it is not listed in ctool.app.src,
+            % which requires this line to include it in the package (but not start it)
+            {n2o, load},
 	        globalregistry
         ]},
        {rel, "start_clean", "",
