--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -10,7 +10,7 @@
 	        public_key,
 	        crypto,
 	        ssl,
-            lager,
+%%             lager,
             xmerl,
             % All ctool deps will be included in the release package,
             % so there is no need to list them here.
