VFS-633, minor fixes

--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,11 @@
     "variables-ct*"
 ]}.
 
-{include_lib, ["deps"]}.
+%% to include deps headers
+{lib_dirs, ["deps"]}.
+
+% TODO is this needed or was just mistaken with above?
+%% {include_lib, ["deps"]}.
 
 {cover_enabled, true}.
 
