--- a/rel/vars.config
+++ b/rel/vars.config
@@ -10,13 +10,13 @@
 %% etc/vm.args
 %%
 {node,         "globalregistry@127.0.0.1"}.
-{cookie,       "globalregistry"}.
+{cookie,       "veildev_56.local"}.
 {crash_dump,   "{{platform_log_dir}}/erl_crash.dump"}.
 
 %%
 %% app.config
 %%
-{db_nodes, "['db@127.0.0.1']"}.
+{db_nodes, "['db@veildev_56.local']"}.
 
 %%
 %% bin/globalregistry
