VFS-685, fixes in logging process

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -61,7 +61,7 @@
     {copy, "../grpca", "./"},
     %% Copy license
     {copy, "../LICENSE.txt", "./"},
-    {copy, "../PRIVACY_POLICY.txt", "./"},
+    {copy, "../PRIVACY_POLICY.html", "./"},
     {copy, "../src/dao/views/", "./"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
