--- a/src/gui/gui_static/auth.config
+++ b/src/gui/gui_static/auth.config
@@ -57,6 +57,7 @@
         {button_icon, <<"/images/openid_icon.png">>},
         {button_color, <<"#9A9FA2">>},
         % Provider specific config
-        {xrds_endpoint, <<"https://openid.plgrid.pl/gateway">>}
+        {xrds_endpoint, <<"https://openid.plgrid.pl/gateway">>},
+        {logout_endpoint, <<"https://openid.plgrid.pl/logout">>}
     ]}
 ].
