ct_tests deps error and missing rest certs fixed + some header update

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 %% behaviours should be compiled before other files
 {erl_first_files, [
-    "src/veil_modules/control_panel/auth/auth_modules/auth_module_behaviour.erl"
+    "src/veil_modules/control_panel/auth/auth_modules/auth_module_behaviour.erl",
+    "src/handlers/rest_module_behavior.erl"
 ]}.
 
 
