VFS-797 Rearrange paths in project.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -42,7 +42,7 @@
 
 {overlay, [
     {mkdir, "log/sasl"},
-    {mkdir, "data/globalregistry"},
+    {mkdir, "lib/data"},
 
     %% Copy base files for starting and interacting with node
     {copy, "../deps/node_package/priv/base/erl",
@@ -54,15 +54,15 @@
     {template, "../deps/node_package/priv/base/env.sh",
         "lib/env.sh"},
     %% Copy n2o files
-    {copy, "../src/gui/gui_static/", "./"},
+    {copy, "../src/gui/gui_static/", "lib/data"},
     %% Copy server certificates
-    {copy, "../cacerts", "./"},
+    {copy, "../cacerts", "lib/data"},
     %% Copy Global Registry Provider CA
-    {copy, "../grpca", "./"},
+    {copy, "../grpca", "lib/data"},
     %% Copy license
-    {copy, "../LICENSE.txt", "./"},
-    {copy, "../PRIVACY_POLICY.html", "./"},
-    {copy, "../src/dao/views/", "./"},
+    {copy, "../LICENSE.txt", "lib/data"},
+    {copy, "../PRIVACY_POLICY.html", "lib/data"},
+    {copy, "../src/dao/views/", "lib/data"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
     {template, "files/vm.args", "etc/vm.args"}
