--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -43,6 +43,7 @@
 {overlay, [
     {mkdir, "log/sasl"},
     {mkdir, "lib/data"},
+    {mkdir, "data/globalregistry"},
 
     %% Copy base files for starting and interacting with node
     {copy, "../deps/node_package/priv/base/erl",
