VFS-797 Fix app.config variables substitution.

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -17,7 +17,7 @@
 %% app.config
 %%
 {db_nodes, "['db@127.0.0.1']"}.
-{rest_cert_domain, "127.0.0.1"}.
+{rest_cert_domain, "\"127.0.0.1\""}.
 
 %%
 %% bin/globalregistry
