VFS-797 Adding bigcouchDB to release.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -43,7 +43,7 @@
 {overlay, [
     {mkdir, "log/sasl"},
     {mkdir, "lib/data"},
-    {mkdir, "data/globalregistry"},
+    {mkdir, "data"},
 
     %% Copy base files for starting and interacting with node
     {copy, "../deps/node_package/priv/base/erl",
@@ -66,5 +66,6 @@
     {copy, "../src/dao/views/", "lib/data"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
-    {template, "files/vm.args", "etc/vm.args"}
+    {template, "files/vm.args", "etc/vm.args"},
+    {copy, "../deps/bigcouchdb", "data"}
 ]}.
