--- a/rebar.config
+++ b/rebar.config
@@ -33,7 +33,8 @@
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {node_package, "1.3.8", {git, "git://github.com/basho/node_package", {tag, "1.3.8"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
-    {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "e80e38b"}}}
+    {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "e80e38b"}}},
+    {bigcouchdb, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/bigcouchdb.git", {tag, "e59bf76"}}, [raw]}
 ]}.
 
 {erl_opts, [
