VFS-797 Change project paths and add comments.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -42,7 +42,9 @@
 
 {overlay, [
     {mkdir, "log/sasl"},
-    {mkdir, "lib/data"},
+    %% Directory for internal project data (e.g. certificates)
+    {mkdir, "releases/data"},
+    %% Directory for external project data (e.g. BigCouch DB release)
     {mkdir, "data"},
 
     %% Copy base files for starting and interacting with node
@@ -55,17 +57,18 @@
     {template, "../deps/node_package/priv/base/env.sh",
         "lib/env.sh"},
     %% Copy n2o files
-    {copy, "../src/gui/gui_static/", "lib/data"},
+    {copy, "../src/gui/gui_static/", "releases/data"},
     %% Copy server certificates
-    {copy, "../cacerts", "lib/data"},
+    {copy, "../cacerts", "releases/data"},
     %% Copy Global Registry Provider CA
-    {copy, "../grpca", "lib/data"},
+    {copy, "../grpca", "releases/data"},
     %% Copy license
-    {copy, "../LICENSE.txt", "lib/data"},
-    {copy, "../PRIVACY_POLICY.html", "lib/data"},
-    {copy, "../src/dao/views/", "lib/data"},
+    {copy, "../LICENSE.txt", "releases/data"},
+    {copy, "../PRIVACY_POLICY.html", "releases/data"},
+    {copy, "../src/dao/views/", "releases/data"},
+    %% Copy BigCouch DB release
+    {copy, "../deps/bigcouchdb", "data"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
-    {template, "files/vm.args", "etc/vm.args"},
-    {copy, "../deps/bigcouchdb", "data"}
+    {template, "files/vm.args", "etc/vm.args"}
 ]}.
