VFS-797 Change paths in ct tests.

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -4,9 +4,9 @@
 
 {package_name, "globalregistry"}.
 {package_install_name, "globalregistry"}.
-{package_install_user, "root"}.
-{package_install_group, "root"}.
-{package_install_user_desc, "root user"}.
+{package_install_user, "globalregistry"}.
+{package_install_group, "globalregistry"}.
+{package_install_user_desc, "Globalregistry user"}.
 {package_shortdesc, "Scalable global data register."}.
 {package_desc, "Scalable global data register."}.
 {package_patch_dir, "globalregistry-patches"}.
