VFS-797 Fix rpm build.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -45,7 +45,7 @@
     %% Directory for internal project data (e.g. certificates)
     {mkdir, "releases/data"},
     %% Directory for external project data (e.g. BigCouch DB release)
-    {mkdir, "data"},
+    {mkdir, "data/globalregistry"},
 
     %% Copy base files for starting and interacting with node
     {copy, "../deps/node_package/priv/base/erl",
