VFS-797  Fork node_package.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -43,9 +43,9 @@
 {overlay, [
     {mkdir, "log/sasl"},
     %% Directory for internal project data (e.g. certificates)
-    {mkdir, "releases/data"},
+    {mkdir, "resources"},
     %% Directory for external project data (e.g. BigCouch DB release)
-    {mkdir, "data/globalregistry"},
+    {mkdir, "data"},
 
     %% Copy base files for starting and interacting with node
     {copy, "../deps/node_package/priv/base/erl",
@@ -57,15 +57,17 @@
     {template, "../deps/node_package/priv/base/env.sh",
         "lib/env.sh"},
     %% Copy n2o files
-    {copy, "../src/gui/gui_static/", "releases/data"},
+    {copy, "../src/gui/gui_static/", "resources"},
     %% Copy server certificates
-    {copy, "../cacerts", "releases/data"},
+    {copy, "../cacerts", "resources"},
     %% Copy Global Registry Provider CA
-    {copy, "../grpca", "releases/data"},
+    {copy, "../grpca", "resources"},
     %% Copy license
-    {copy, "../LICENSE.txt", "releases/data"},
-    {copy, "../PRIVACY_POLICY.html", "releases/data"},
-    {copy, "../src/dao/views/", "releases/data"},
+    {copy, "../LICENSE.txt", "resources"},
+    {copy, "../PRIVACY_POLICY.html", "resources"},
+    {copy, "../src/dao/views/", "resources"},
+    %% Copy BigCouchDB release
+    {copy, "../deps/bigcouchdb", "data"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
     {template, "files/vm.args", "etc/vm.args"}
