VFS-810, auth.config is now downloaded from onedev repo

--- a/rebar.config
+++ b/rebar.config
@@ -18,9 +18,6 @@
 %% to include deps headers
 {lib_dirs, ["deps"]}.
 
-% TODO is this needed or was just mistaken with above?
-%% {include_lib, ["deps"]}.
-
 {cover_enabled, true}.
 
 {eunit_opts, [
@@ -43,7 +40,7 @@
 ]}.
 
 {pre_hooks, [
-    {'get-deps', "./pull_onedev.sh"},
+    {'get-deps', "./update_onedev.sh"},
     {eunit, "mkdir -p test/results"}, %% Make dir for eunit' surefire test results
     {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
     {compile, "mkdir -p test_distributed/log"},
