VFS-833, modify home page

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -65,6 +65,7 @@
     %% Copy license
     {copy, "../LICENSE.txt", "resources"},
     {copy, "../PRIVACY_POLICY.html", "resources"},
+    {copy, "../HOMEPAGE_HEADER.html", "resources"},
     {copy, "../src/dao/views/", "resources"},
     %% Copy BigCouchDB release
     {copy, "../deps/bigcouchdb", "data"},
