VFS-810, apply recommended changes

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -70,7 +70,9 @@
     {copy, "../deps/bigcouchdb", "data"},
     %% Copy auth config file. By default it is empty, but if the user has access
     %% to onedev repo, it will be exchanged for working config with test apps.
-    {copy, "../auth.config", "resources"},
+    {copy, "files/auth.config", "resources"},
+    % Copy example auth.config
+    {copy, "files/auth.config.example", "resources"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
     {template, "files/vm.args", "etc/vm.args"}
