VFS-833, move several file

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -64,8 +64,6 @@
     {copy, "../grpca", "resources"},
     %% Copy license
     {copy, "../LICENSE.txt", "resources"},
-    {copy, "../PRIVACY_POLICY.html", "resources"},
-    {copy, "../HOMEPAGE_HEADER.html", "resources"},
     {copy, "../src/dao/views/", "resources"},
     %% Copy BigCouchDB release
     {copy, "../deps/bigcouchdb", "data"},
@@ -74,6 +72,8 @@
     {copy, "files/auth.config", "resources"},
     % Copy example auth.config
     {copy, "files/auth.config.example", "resources"},
+    {copy, "files/PRIVACY_POLICY.html", "resources"},
+    {copy, "files/HOMEPAGE_HEADER.html", "resources"},
     %% Copy config files
     {template, "files/app.config", "etc/app.config"},
     {template, "files/vm.args", "etc/vm.args"}
