--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -72,6 +72,7 @@
     {copy, "files/auth.config", "resources"},
     % Copy example auth.config
     {copy, "files/auth.config.example", "resources"},
+    % Copy customisable pages of GUI
     {copy, "files/PRIVACY_POLICY.html", "resources"},
     {copy, "files/HOMEPAGE_HEADER.html", "resources"},
     %% Copy config files
