VFS-855, move static files to ctool

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 globalregistry.iml
 *.beam
 
+src/gui/gui_static/flatui
+src/gui/gui_static/fonts
+src/gui/gui_static/n2o
+
 deps
 ebin
 rel/globalregistry
