--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -67,6 +67,10 @@
     {copy, "../src/dao/views/", "resources"},
     %% Copy BigCouchDB release
     {copy, "../deps/bigcouchdb", "data"},
+    %% Copy onepanel release
+    {copy, "../deps/onepanel/rel/onepanel", "data"},
+    %% Copy setup and administrative scripts
+    {copy, "scripts", "data"},
     %% Copy auth config file. By default it is empty, but if the user has access
     %% to onedev repo, it will be exchanged for working config with test apps.
     {copy, "files/auth.config", "resources"},
