--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -68,7 +68,7 @@
     %% Copy BigCouchDB release
     {copy, "../deps/bigcouchdb", "data"},
     %% Copy onepanel release
-    {copy, "../deps/onepanel/rel/onepanel", "data"},
+    {copy, "../onepanel/rel/onepanel", "data"},
     %% Copy setup and administrative scripts
     {copy, "scripts", "data"},
     %% Copy auth config file. By default it is empty, but if the user has access
