VFS-757 Change makefile.

--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,8 @@
     {node_package, ".*", {git, "https://github.com/krzysztof-trzepla/node_package.git", {tag, "68823c6"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "fa58e30"}}},
-    {bigcouchdb, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/bigcouchdb.git", {tag, "e59bf76"}}, [raw]}
+    {bigcouchdb, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/bigcouchdb.git", {tag, "e59bf76"}}, [raw]},
+    {onepanel, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/onepanel.git", {tag, "fa9ac5c"}}, [raw]}
 ]}.
 
 {erl_opts, [
