--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %% behaviours should be compiled before other files
 {erl_first_files, [
-    "src/veil_modules/control_panel/auth/auth_modules/auth_module_behaviour.erl",
+    "src/auth/auth_modules/auth_module_behaviour",
     "src/handlers/rest_module_behavior.erl"
 ]}.
 
@@ -26,11 +26,11 @@
 ]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "c15e5a5"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "99c302f"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {node_package, ".*", {git, "https://github.com/krzysztof-trzepla/node_package.git", {tag, "4d4de3f"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
-    {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "fa58e30"}}},
+    {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "7c9babb"}}},
     {bigcouchdb, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/bigcouchdb.git", {tag, "e59bf76"}}, [raw]}
 ]}.
 
