--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "onepanel"]
 	path = onepanel
 	url = ssh://git@git.plgrid.pl:7999/vfs/onepanel.git
+[submodule "bigcouchdb"]
+	path = bigcouchdb
+	url = ssh://git@git.plgrid.pl:7999/vfs/bigcouchdb.git
