VFS-882 Fix release generation.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -30,9 +30,9 @@
     {boot_rel, "globalregistry"},
     {profile, embedded},
     {incl_cond, derived},
-    {mod_cond, derived},
     {excl_archive_filters, [".*"]}, %% Do not archive built libs
-    {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
+    {excl_sys_filters, ["^bin/(?!start_clean.boot)",
+        "^erts.*/bin/(dialyzer|typer)",
         "^erts.*/(doc|info|include|lib|man|src)"]},
     {excl_app_filters, ["\.gitignore"]},
     {app, globalregistry, [{mod_cond, app}, {incl_cond, include}, {lib_dir, ".."}]},
