--- a/rel/vars.config
+++ b/rel/vars.config
@@ -1,34 +1,7 @@
-
-%% Platform-specific installation paths
-{platform_bin_dir,  "./bin"}.
-{platform_data_dir, "./data"}.
-{platform_etc_dir,  "./etc"}.
-{platform_lib_dir,  "./lib"}.
-{platform_log_dir,  "./log"}.
-
-%%
-%% etc/vm.args
-%%
+%% vm.args
 {node,         "globalregistry@127.0.0.1"}.
 {cookie,       "globalregistry"}.
-{crash_dump,   "{{platform_log_dir}}/erl_crash.dump"}.
 
-%%
 %% app.config
-%%
 {db_nodes, "['db@127.0.0.1']"}.
 {rest_cert_domain, "\"127.0.0.1\""}.
-
-%%
-%% bin/globalregistry
-%%
-{data_dir,           "{{target_dir}}/data"}.
-{runner_script_dir,  "\`cd \\`dirname $0\\` && /bin/pwd\`"}.
-{runner_base_dir,    "{{runner_script_dir}}/.."}.
-{runner_etc_dir,     "$RUNNER_BASE_DIR/etc"}.
-{runner_log_dir,     "$RUNNER_BASE_DIR/log"}.
-{runner_lib_dir,     "$RUNNER_BASE_DIR/lib"}.
-{runner_patch_dir,   "$RUNNER_BASE_DIR/lib/globalregistry-patches"}.
-{pipe_dir,           "/tmp/$RUNNER_BASE_DIR/"}.
-{runner_user,        ""}.
-{runner_wait_process, "globalregistry_sup"}.
