--- a/rel/app.config
+++ b/rel/app.config
@@ -18,19 +18,18 @@
             %% rotate info log once a week (friday at 11 p.m) or when it reaches 100 MB; keep 100 rotated logs
             {lager_file_backend, [{file, "log/info.log"}, {level, info}, {size, 104857600}, {date, "$W5D23"}, {count, 100}]},
             %% rotate info log once a day (at midnight) or when it reaches 10 MB; keep 10 rotated logs
-            {lager_file_backend, [{file, "log/debug.log"}, {level, debug}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
-            {central_logging_backend, debug}
+            {lager_file_backend, [{file, "log/debug.log"}, {level, debug}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
         ]},
         {error_logger_hwm, 200},
-        % When lager should change mode to synchronous (log queue is longer than async_threshold)
+        % when lager should change mode to synchronous (log queue is longer than async_threshold)
         {async_threshold, 500},
-        % When lager should return from mode to synchronous (log queue is shorter than (async_threshold - async_threshold_window)
+        % when lager should return from mode to synchronous (log queue is shorter than (async_threshold - async_threshold_window)
         {async_threshold_window, 50}
     ]},
 
     %% globalregistry config
     {globalregistry, [
-        {db_nodes, {{db_nodes}}},
-        {rest_cert_domain, {{rest_cert_domain}}}
+        {db_nodes, {{db_nodes}} },
+        {rest_cert_domain, {{rest_cert_domain}} }
     ]}
 ].
