VFS-882 Building RPM package.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -49,6 +49,7 @@
     %% Directory for internal project data (e.g. certificates)
     {mkdir, "resources"},
 
+    %% Copy start-up scripts
     {copy, "../rel/files/erl", "\{\{erts_vsn\}\}/bin/erl"},
     {copy, "../rel/files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
     {copy, "globalregistry/bin/start_clean.boot", "\{\{erts_vsn\}\}/bin/start_clean.boot"},
@@ -67,9 +68,6 @@
     %% Copy license and documentation
     {copy, "../LICENSE.txt", "./"},
     {copy, "../README.md", "./"},
-
-    %% Copy setup and administrative scripts
-    {copy, "scripts", "./"},
 
     %% Copy config files
     {template, "app.config", "etc/app.config"},
