--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -14,6 +14,8 @@
             public_key,
             crypto,
             ssl,
+            % Meck is needed only for development purposes, should be removed before release.
+            meck,
             % All ctool deps will be included in the release package,
             % so there is no need to list them here.
             ctool,
