VFS-914, add DNS to GR

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 globalregistry.iml
 *.beam
 
+src/gui/gui_static/common
 src/gui/gui_static/flatui
 src/gui/gui_static/fonts
 src/gui/gui_static/n2o
