VFS-914, DNS server in GR supports aliases

--- a/rel/resources/dns.config
+++ b/rel/resources/dns.config
@@ -2,18 +2,22 @@
 {zone, [
     % Canonical domain name
     {cname, "onedata.org"},
-    % IP addresses of servers hosting the domain
+    % IP addresses of servers in the domain (list of IPs for every hostname).
+    % Must include NS and MX servers.
+    % All hostnames must end with cname.
     {ip_addresses, [
-        '127.0.0.1'
+        {"onedata.org", ["127.0.0.1"]},
+        {"ns.onedata.org", ["127.0.0.1"]},
+        {"mail.onedata.org", ["127.0.0.1"]}
     ]},
-    % Hostnames and IP addresses of domain's name servers
+    % Hostnames of domain's name servers
     {ns_servers, [
-        {"ns.onedata.org", '127.0.0.1'}
+        "ns.onedata.org"
     ]},
     % Hosts handling mail exchange for the domain
     {mail_exchange, [
         % Values are {<preference>, <hostname>}, lowest preference is preferred
-        {0, "onedata.org"}
+        {10, "mail.onedata.org"}
     ]},
     % Parameters used to generate SOA responses
     {authority, [
@@ -32,5 +36,15 @@
         {expiry, 1209600},
         % Time a NAME ERROR = NXDOMAIN result may be cached by any resolver
         {nxdomain_ttl, 300}           
+    ]},
+    % Time To Live for defferent types of responses
+    {ttl, [
+        {a, 3600},
+        {ns, 86400},
+        {soa, 10800},
+        {mx, 10800},
+        % Used when answering that a certain oneprovider supports requested domain.
+        % For example: Question A alias.onedata.org will be answered with oneprovider IP in authority section with this TTL.
+        {oneprovider_ns, 3600}
     ]}
 ]}.
