VFS-937 Components reorganization.

--- a/rel/app.config
+++ b/rel/app.config
@@ -29,7 +29,55 @@
 
     %% globalregistry config
     {globalregistry, [
+        %% DB config
         {db_nodes, {{db_nodes}} },
-        {rest_cert_domain, {{rest_cert_domain}} }
+
+        %% GRP config
+        {grpca_dir, "resources/grpca"},
+        {grpkey_file, "resources/grpca/grpkey.pem"},
+        {grpcert_file, "resources/grpca/grpcert.pem"},
+        {grpcert_domain, {{grpcert_domain}} }, %% the cert domain is also used to provide CRLs
+        {root_cacert_file, '/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem'},
+
+        %% Provider channel config
+        {provider_channel_port, 5555},
+        {provider_channel_https_acceptors, 50},
+
+        %% REST config
+        {rest_port, 8443},
+        {rest_https_acceptors, 50},
+        %% OpenID Provider for REST
+        {authorization_code_expiration_seconds, 600},
+        {access_token_expiration_seconds, 3600},
+        {openid_issuer_url, "https://onedata.org"},
+
+        %% GUI config
+        {gui_port, 443},
+        {gui_https_acceptors, 100},
+        {gui_socket_timeout, 60000},
+        {gui_max_keepalive, 30},
+        {gui_sessions_cookie_ttl, 3600}, % one hour
+        %% certs todo generate dedicated certs (this are example ones)
+        {gui_key_file, "resources/certs/gui_key.pem"},
+        {gui_cert_file, "resources/certs/gui_cert.pem"},
+        {gui_cacert_file, "resources/cacerts/gui_cacert.pem"},
+
+        %% HTTP redirector config
+        {gui_redirect_port, 80},
+        {gui_redirect_acceptors, 10},
+
+        %% dao
+        {view_def_location, "resources/views/"},
+
+        %% DNS config
+        %% DNS port
+        {dns_port, 53},
+        %% Maximum supported UDP size, that will be advertised by the server (via EDNS). If a client advertises a bigger
+        %% value, it will be assumed to be as high as this.
+        {edns_max_udp_size, 1280},
+        %% Number of dns tcp acceptors
+        {dns_tcp_acceptor_pool_size, 20},
+        %% Time (in sec) after which dns closes idle connection
+        {dns_tcp_timeout, 20}
     ]}
 ].
