--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -63,6 +63,7 @@
     %% Copy resources
     {copy, "resources", "./"},
     {copy, "../src/gui/gui_static/", "resources"},
+    {copy, "../certs", "resources"},
     {copy, "../cacerts", "resources"},
     {copy, "../grpca", "resources"},
     {copy, "../src/dao/views/", "resources"},
