VFS-937 Fix ct tests.

--- a/rel/app.config
+++ b/rel/app.config
@@ -40,8 +40,8 @@
         {root_cacert_file, '/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem'},
 
         %% Provider channel config
-        {provider_channel_port, 5555},
-        {provider_channel_https_acceptors, 50},
+        {op_channel_port, 5555},
+        {op_channel_https_acceptors, 50},
 
         %% REST config
         {rest_port, 8443},
