--- a/rebar.config
+++ b/rebar.config
@@ -26,10 +26,11 @@
 ]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "0ae712e"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "f2024aee391"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
-    {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "f40ba4d0602"}}}
+    {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "f40ba4d0602"}}},
+    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "0836126457a"}}, [raw]}
 ]}.
 
 {erl_opts, [
