VFS-935, update default TTLs in dns.config

--- a/rel/resources/dns.config
+++ b/rel/resources/dns.config
@@ -35,16 +35,19 @@
         % can elapse before the zone is no longer authoritative
         {expiry, 1209600},
         % Time a NAME ERROR = NXDOMAIN result may be cached by any resolver
-        {nxdomain_ttl, 300}           
+        {nxdomain_ttl, 120}
     ]},
     % Time To Live for defferent types of responses
     {ttl, [
-        {a, 3600},
-        {ns, 86400},
-        {soa, 10800},
-        {mx, 10800},
+        {a, 120},
+        {ns, 120},
+        {soa, 120},
+        {mx, 120},
         % Used when answering that a certain oneprovider supports requested domain.
         % For example: Question A alias.onedata.org will be answered with oneprovider IP in authority section with this TTL.
-        {oneprovider_ns, 3600}
+        {oneprovider_ns, 120},
+        % Analogical as above, but corcerns a case when GR answers with A records so that the provider does not have
+        % to host a DNS server. This feature can be turned on during installation.
+        {oneprovider_a, 120}
     ]}
 ]}.
