--- a/rebar.config
+++ b/rebar.config
@@ -26,11 +26,12 @@
 ]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "d60a3a22a51"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "2be3ef44d3d"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "f40ba4d0602"}}},
-    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "0836126457a"}}, [raw]}
+    {protobuffs, "0.8.1p4", {git, "https://github.com/basho/erlang_protobuffs.git", {tag, "0.8.1p4"}}},
+    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "56de51abdf9"}}, [raw]}
 ]}.
 
 {erl_opts, [
