rename app.config to sys.config, remove vars.config

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -43,8 +43,6 @@
 
 {target_dir, "globalregistry"}.
 
-{overlay_vars, "vars.config"}.
-
 {overlay, [
     %% Directory for System Architecture Support Libraries (SASL) logging
     {mkdir, "log/sasl"},
@@ -73,6 +71,6 @@
     {copy, "../README.md", "./"},
 
     %% Copy config files
-    {template, "app.config", "etc/app.config"},
-    {template, "files/vm.args", "etc/vm.args"}
+    {copy, "sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
+    {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
 ]}.
