--- a/rel/sys.config
+++ b/rel/sys.config
@@ -66,7 +66,7 @@
         {gui_redirect_acceptors, 10},
 
         %% DB config
-        {db_nodes, 'db@127.0.0.1'},
+        {db_nodes, ['db@127.0.0.1']},
         {view_def_location, "resources/views/"},
 
         %% DNS config
