--- a/rebar.config
+++ b/rebar.config
@@ -44,7 +44,10 @@
     {eunit, "mkdir -p test/results"}, %% Make dir for eunit' surefire test results
     {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
     {compile, "mkdir -p test_distributed/log"},
-    {compile, "chmod u+x test_distributed/start_distributed_test.sh"}
+    {compile, "chmod u+x test_distributed/start_distributed_test.sh"},
+    % gen_dev compilation
+    {clean, "make -C bamboos/gen_dev/ clean"},
+    {compile, "make -C bamboos/gen_dev/ compile"}
 ]}.
 
 {post_hooks, [
