VFS-1023, rebar config added

--- a/rebar.config
+++ b/rebar.config
@@ -41,7 +41,7 @@
 
 {pre_hooks, [
     {'get-deps', "./update_onedev.sh"},
-    {eunit, "mkdir -p test/results"}, %% Make dir for eunit' surefire test results
+    {eunit, "mkdir -p test/eunit_results"}, %% Make dir for eunit' surefire test results
     {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
     {compile, "mkdir -p test_distributed/log"},
     {compile, "chmod u+x test_distributed/start_distributed_test.sh"},
