VFS-1023, rebar config updated

--- a/rebar.config
+++ b/rebar.config
@@ -20,10 +20,8 @@
 
 {cover_enabled, true}.
 
-{eunit_opts, [
-    verbose,
-    {report, {eunit_surefire, [{dir, "../test/results"}]}}
-]}.
+%% eunit opts - Maven-like output formatting
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
     {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "4ccc985a811"}}},
