--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
 
 {clean_files, [
     "ebin/*.beam",
-    "test/results",
+    "test/eunit_results",
     "test_distributed/*/*.beam",
     "test_distributed/log/*",
     "variables-ct*"
