--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 %% behaviours should be compiled before other files
 {erl_first_files, [
     "src/auth/auth_modules/auth_module_behaviour.erl",
-    "src/handlers/rest_module_behavior.erl"
+    "src/handlers/rest_module_behavior.erl",
+    "deps/ctool/annotations/perf_test.erl"
 ]}.
 
 
@@ -16,7 +17,7 @@
 ]}.
 
 %% to include deps headers
-{lib_dirs, ["deps"]}.
+{lib_dirs, ["deps", "deps/annotations"]}.
 
 {cover_enabled, true}.
 
@@ -27,6 +28,8 @@
     {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "b65d56288c2"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
+    {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {tag, "763462825e"}}},
+    {annotations, ".*", {git, "https://github.com/hyperthunk/annotations.git", {tag, "3f257db848"}}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "014a10d4450"}}},
     {websocket_client, ".*", {git, "git://github.com/RoXeon/websocket_client", {tag, "c8a2554"}}},
     {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "56de51abdf9"}}, [raw]},
@@ -35,7 +38,8 @@
 
 {erl_opts, [
     fail_on_warning,
-    debug_info
+    debug_info,
+    {src_dirs, ["src", "test_distributed"]}
 ]}.
 
 {pre_hooks, [
@@ -49,7 +53,8 @@
 ]}.
 
 {post_hooks, [
-    {'get-deps', "cp -Rf ./deps/ctool/src/gui_static/* ./src/gui/gui_static/"}
+    {'get-deps', "cp -Rf ./deps/ctool/src/gui_static/* ./src/gui/gui_static/"},
+    {compile, "cp ebin/*SUITE* test_distributed/"}
 ]}.
 
 % Options for erlyDTL (templates for GUI)
