--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "b65d56288c2"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "8be00532ce6"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {tag, "763462825e"}}},
@@ -35,6 +35,9 @@
     {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "56de51abdf9"}}, [raw]},
     {protobuffs, "0.8.1p4", {git, "https://github.com/basho/erlang_protobuffs.git", {tag, "0.8.1p4"}}}
 ]}.
+
+%% annotations
+{plugins, [rebar_annotations_plugin]}.
 
 {erl_opts, [
     fail_on_warning,
