--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {erl_first_files, [
     "src/auth/auth_modules/auth_module_behaviour.erl",
     "src/handlers/rest_module_behavior.erl",
-    "deps/ctool/annotations/perf_test.erl"
+    "deps/ctool/annotations/performance.erl"
 ]}.
 
 
@@ -11,13 +11,13 @@
 {clean_files, [
     "ebin/*.beam",
     "test/eunit_results",
-    "test_distributed/*/*.beam",
-    "test_distributed/log/*",
+    "test_distributed/*.beam",
+    "test_distributed/logs/*",
     "variables-ct*"
 ]}.
 
 %% to include deps headers
-{lib_dirs, ["deps", "deps/annotations"]}.
+{lib_dirs, ["deps"]}.
 
 {cover_enabled, true}.
 
@@ -25,7 +25,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "331015451c0"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "08ec202b7dc"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {tag, "763462825e"}}},
@@ -36,8 +36,8 @@
     {protobuffs, "0.8.1p4", {git, "https://github.com/basho/erlang_protobuffs.git", {tag, "0.8.1p4"}}}
 ]}.
 
-%% annotations
-{plugins, [rebar_annotations_plugin]}.
+%% plugins
+{plugins, [rebar_git_plugin, rebar_annotations_plugin]}.
 
 {erl_opts, [
     fail_on_warning,
@@ -50,7 +50,7 @@
     {eunit, "mkdir -p test/eunit_results"}, %% Make dir for eunit' surefire test results
     {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
     {compile, "mkdir -p test_distributed/log"},
-    % gen_dev compilation
+    %% gen_dev compilation
     {clean, "make -C bamboos/gen_dev/ clean"},
     {compile, "make -C bamboos/gen_dev/ compile"}
 ]}.
@@ -60,7 +60,7 @@
     {compile, "cp ebin/*SUITE* test_distributed/"}
 ]}.
 
-% Options for erlyDTL (templates for GUI)
+%% Options for erlyDTL (templates for GUI)
 {erlydtl_opts, [
     {compiler_options, [debug_info]},
     {doc_root, "src/gui/gui_static/templates"},
