VFS-1050 Minor changes.

--- a/rebar.config
+++ b/rebar.config
@@ -5,15 +5,12 @@
     "deps/ctool/annotations/performance.erl"
 ]}.
 
-
 {sub_dirs, ["rel"]}.
 
 {clean_files, [
-    "ebin/*.beam",
     "test/eunit_results",
     "test_distributed/*.beam",
-    "test_distributed/logs/*",
-    "variables-ct*"
+    "test_distributed/logs/*"
 ]}.
 
 %% to include deps headers
