--- a/rebar.config
+++ b/rebar.config
@@ -22,15 +22,14 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "b40d3650650"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "f7d6bb2dd4"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {tag, "763462825e"}}},
     {annotations, ".*", {git, "https://github.com/hyperthunk/annotations.git", {tag, "3f257db848"}}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "014a10d4450"}}},
     {websocket_client, ".*", {git, "git://github.com/RoXeon/websocket_client", {tag, "c8a2554"}}},
-    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "56de51abdf9"}}, [raw]},
-    {protobuffs, "0.8.1p4", {git, "https://github.com/basho/erlang_protobuffs.git", {tag, "0.8.1p4"}}}
+    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "ac4ad441af"}}}
 ]}.
 
 %% plugins
