VFS-1098 Adjust project to coding standards.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -14,6 +14,7 @@
             public_key,
             crypto,
             ssl,
+            prproto,
             % Meck is needed only for development purposes, should be removed before release.
             meck,
             % All ctool deps will be included in the release package,
