--- a/rebar.config
+++ b/rebar.config
@@ -22,14 +22,14 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "f7d6bb2dd4"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "892bed63af"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {tag, "763462825e"}}},
     {annotations, ".*", {git, "https://github.com/hyperthunk/annotations.git", {tag, "3f257db848"}}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "014a10d4450"}}},
     {websocket_client, ".*", {git, "git://github.com/RoXeon/websocket_client", {tag, "c8a2554"}}},
-    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "ac4ad441af"}}}
+    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "b1d3b56951"}}}
 ]}.
 
 %% plugins
@@ -44,7 +44,8 @@
 {pre_hooks, [
     {'get-deps', "./update_onedev.sh"},
     {eunit, "mkdir -p test/eunit_results"}, %% Make dir for eunit' surefire test results
-    {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't start during eunit tests, so we need to force start it
+    {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't
+                             %% start during eunit tests, so we need to force start it
     {compile, "mkdir -p test_distributed/log"},
     %% gen_dev compilation
     {clean, "make -C bamboos/gen_dev/ clean"},
