VFS-1172, add env setup functions

--- a/rel/sys.config
+++ b/rel/sys.config
@@ -23,6 +23,10 @@
 
     %% globalregistry config
     {globalregistry, [
+        % Developer mode - enables developer featuers such as REST endpoints with
+        % funcionalities used in tests.
+        {dev_mode, false},
+
         {ports_in_use, [dns_port, gui_redirect_port, gui_port, op_channel_port, rest_port]},
 
         %% GRP config
