VFS-1172, add dev registration rest endpoint

--- a/rel/sys.config
+++ b/rel/sys.config
@@ -23,7 +23,7 @@
 
     %% globalregistry config
     {globalregistry, [
-        % Developer mode - enables developer featuers such as REST endpoints with
+        % Developer mode - enables developer features such as REST endpoints with
         % funcionalities used in tests.
         {dev_mode, false},
 
