VFS-1172, update bamboos

--- a/rebar.config
+++ b/rebar.config
@@ -43,13 +43,18 @@
 
 {pre_hooks, [
     {'get-deps', "./update_onedev.sh"},
-    {eunit, "mkdir -p test/eunit_results"}, %% Make dir for eunit' surefire test results
-    {eunit, "epmd -daemon"}, %% Sometimes, in some cases epmd daemon doesn't
-                             %% start during eunit tests, so we need to force start it
+    %% Make dir for eunit' surefire test results
+    {eunit, "mkdir -p test/eunit_results"},
+    %% Sometimes, in some cases epmd daemon doesn't
+    %% start during eunit tests, so we need to force start it
+    {eunit, "epmd -daemon"},
     {compile, "mkdir -p test_distributed/log"},
     %% gen_dev compilation
     {clean, "make -C bamboos/gen_dev/ clean"},
-    {compile, "make -C bamboos/gen_dev/ compile"}
+    {compile, "make -C bamboos/gen_dev/ compile"},
+    %% env_configurator compilation
+    {clean, "make -C bamboos/env_configurator/ clean"},
+    {compile, "make -C bamboos/env_configurator/ compile"}
 ]}.
 
 {post_hooks, [
