--- a/rel/sys.config
+++ b/rel/sys.config
@@ -25,6 +25,9 @@
     {globalregistry, [
         {ports_in_use, [dns_port, gui_redirect_port, gui_port, op_channel_port, rest_port]},
 
+        %% List of beam directories to be covered, cover is not started if list is empty
+        {covered_dirs, []},
+
         %% GRP config
         {grpca_dir, "resources/grpca"},
         {grpkey_file, "resources/grpca/grpkey.pem"},
