VFS-1174, Cover update

--- a/rel/sys.config
+++ b/rel/sys.config
@@ -27,6 +27,8 @@
 
         %% List of beam directories to be covered, cover is not started if list is empty
         {covered_dirs, []},
+        %% List of modules to be excluded during cover analysis
+        {covered_excluded_modules, []},
 
         %% GRP config
         {grpca_dir, "resources/grpca"},
