--- a/rebar.config
+++ b/rebar.config
@@ -29,7 +29,8 @@
     {annotations, ".*", {git, "https://github.com/hyperthunk/annotations.git", {tag, "3f257db848"}}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "014a10d4450"}}},
     {websocket_client, ".*", {git, "git://github.com/RoXeon/websocket_client", {tag, "c8a2554"}}},
-    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "8b71875013"}}}
+    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "8b71875013"}}},
+    {macaroons, "0.5.1", {git, "https://github.com/kzemek/libmacaroons-erlang.git", {tag, "0.5.1"}}}
 ]}.
 
 %% plugins
