Support for coverage.escript.

--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
 {lib_dirs, ["deps"]}.
 
 {cover_enabled, true}.
+{cover_export_enabled, true}.
 
 %% eunit opts - Maven-like output formatting
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
